--- a/public/index.html
+++ b/public/index.html
@@ -14,4 +14,5 @@
     <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
+  <style>* { margin: 0 !important; }</style>
 </html>
