--- a/public/index.html
+++ b/public/index.html
@@ -23,5 +23,9 @@
       }
     </style>
   </body>
-  <style>* { margin: 0 !important; }</style>
+  <style>
+    * {
+      margin: 0 !important;
+    }
+  </style>
 </html>
