--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,18 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
     <link rel="icon" href="<%= BASE_URL %>favicon.png" />
     <title><%= htmlWebpackPlugin.options.title %></title>
+    <meta
+      name="description"
+      content="RK Expo was founded in 2019. The company offers 
+complete services for trade fairs and exhibitions. They provide realisation across 
+Europe"
+    />
+    <meta
+      name="keywords"
+      content="visualisation,3D,exhibition,exhibition booth,fair trades,czech republic,europe,international,calculator,"
+    />
+
+    <meta name="author" content="Klara,Istvan and Akos" />
   </head>
   <body>
     <noscript>
